--- a/index.html
+++ b/index.html
@@ -46,6 +46,17 @@
     <!-- Projects Section -->
     <section id="projects">
         <h1>Buttons</h1>
+        <div class="buttons">
+            <button class="primary">Primary</button>
+            <button class="secondary">Secondary</button>
+            <button class="primary" disabled>Disabled</button>
+            <button class="outline">Outline</button>
+            <button class="secondary outline">Alt Outline</button>
+            <button class="outline" disabled>Disabled</button>
+        </div>
+        <div class="text-box" id="text-box">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil voluptate expedita natus quos. Suscipit asperiores ad omnis minus hic repellendus temporibus perspiciatis, corrupti architecto quia obcaecati qui id enim?</p>
+        </div>
     </section>
 
     <!-- Contact Section -->
